[tool.poetry]
name = "si_utils"
version = "0.1.0"
description = ""
authors = ["Alex Tremblay <alex.tremblay@utoronto.ca>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
